--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
