--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,10 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
-    "daisyui": "^5.0.46",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
